--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,31 @@
 <resources>
 
     <string name="app_name">EmoTracker</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">События</string>
+    <string name="title_section2">Показатели</string>
+    <string name="title_section3">Настройки</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
+
+    <string name="hello_world">Hello world!</string>
+
+    <string name="no_bluetooth_message">Bluetooth недоступен на устройстве</string>
+
+    <string name="bluetooth_connecting_message">Подключаем устройство</string>
+
+    <string name="pulse_hint">Пульс</string>
+    <string name="stress_hint">Стресс (баллы)</string>
+    <string name="activity_hint">Активность</string>
+    <string name="steps_hint">Шаги</string>
+    <string name="register_title">Спасибо что согласились учавствовать в этом тестировании. Полученные результаты будут содействовать развитию методов изучения эмоционального восприятия. Ваш вклад в этот процесс очень важен для нашей команды.</string>
+    <string name="enter_login">Введите Логин</string>
+    <string name="enter_name">Фамилию и имя</string>
+    <string name="enter_age">Возраст</string>
+    <string name="enter_gender">Пол</string>
+    <string name="register">Регистрация</string>
+    <string name="go">Далее</string>
+
 
 </resources>
