--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="device_is_ok">Устройство на руке</string>
     <string name="record">Запись события</string>
     <string name="start">Старт</string>
+    <string name="email">E-mail</string>
 
+    <string name="preferences_filename">emo_preferences</string>
 
 </resources>
