--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="title_section3">Настройки</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
+    <string name="action_connect">Подключить устройство</string>
     <string name="action_settings">Settings</string>
 
     <string name="hello_world">Hello world!</string>
@@ -33,5 +33,10 @@
     <string name="email">E-mail</string>
 
     <string name="preferences_filename">emo_preferences</string>
+    <string name="power_off">Отключиться</string>
+    <string name="pulse_threshold">Пороги по пульсу:</string>
+    <string name="stress_threshold">Пороги по стрессу:</string>
+    <string name="step_threshold">Пороги по шагам:</string>
+    <string name="activity_threshold">Пороги по активности:</string>
 
 </resources>
